--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "axios": "^0.27.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-infinite-scroll-hook": "^4.0.3",
     "react-line-awesome": "^1.3.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
